[package]
name = "parachain-runtime-constants"
version = "0.9.16"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
smallvec = "1.6.1"


primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.16"}


[features]
default = ["std"]
std = [
]
